# bandicoot_software

./: CollisionDetection.cpp  CollisionDetection.h  CollisionObject.cpp  CollisionObject.h  IKSolver.cpp  IKSolver.h  Lever.cpp  Lever.h  Octree.cpp  Octree.h  README.md  RobotArm.cpp  RobotArm.h  Rotator.cpp  Rotator.h  SLAMInterface.h  Segment.cpp  Segment.h  Sphere.cpp  Sphere.h  gitlog  identifier.cpp  main.cpp
T210_Task_Control_SSu/: Communicator.h  Controller.h  Executor.h  FeedbackResolver.h  Generator.h  InputInterpreter.h  Scheduler.h  Task.h  main.cpp
T210_Task_Control_SSu/Actions/: Action.h  ArmAction.h  MotionAction.h  SensorAction.h
mcl/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
mcl/devel/lib/pkgconfig/: skid_steer_robot.pc
mcl/devel/lib/skid_steer_robot/: goal  main
skid_steer_robot/: CMakeLists.txt  README.md
skid_steer_robot/config/: base_local_planner_params.yaml  global_costmap_params.yaml
skid_steer_robot/include/: motion_controller.hpp
skid_steer_robot/launch/: amcl.launch  gmapping.launch  navigation.launch  world.launch
skid_steer_robot/src/: main.cpp  motion_controller.cpp
src/coco_teleop/: CMakeLists.txt  package.xml
src/coco_teleop/launch/: coco_teleop_launch.py
src/coco_teleop/src/: teleop_coco.cpp
src/learning_joy/: CMakeLists.txt  package.xml
src/learning_joy/src/: turtle_teleop_joy.cpp
src/pwm_control/: CMakeLists.txt  package.xml
src/pwm_control/launch/: pwm_control.launch.py
src/pwm_control/src/: DriveCode.cpp
task_control/: .gitignore  CMakeLists.txt
task_control/src/: test.cpp
(+5 files in other folders)
